Import changes based on Patient package refactor